# cabal-solver-sat

./: CabalExtract.hs  README.md  cabal-solver-sat.cabal  cabal.project
examples/: sudoku.cabal
src/Distribution/Solver/: SAT.hs
src/Distribution/Solver/SAT/: Base.hs  Config.hs  Constraints.hs  DMap.hs  Demo.hs  DependencyInfo.hs  Implementation.hs  Installed.hs  PkgConfig.hs  Preferences.hs  Solver.hs  Sources.hs
