cabal-version:   2.4
name:            cabal-solver-sat
version:         0.1.0.0
synopsis:        cabal-install solver using sat-simple.
description:     cabal-install solver using @sat-simple@.
license:         BSD-3-Clause
license-file:    LICENSE
author:          Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:      Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:       2023 Oleg Grenrus
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==9.2.8 || ==9.4.7 || ==9.6.2

common language
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveGeneric
    DeriveTraversable
    GADTs
    LambdaCase
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    PatternSynonyms
    PatternSynonyms
    PolyKinds
    QuantifiedConstraints
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeOperators

library
  import:          language
  hs-source-dirs:  src
  exposed-modules: Distribution.Solver.SAT.Demo
  exposed-modules:
    Distribution.Solver.SAT
    Distribution.Solver.SAT.Base
    Distribution.Solver.SAT.Config
    Distribution.Solver.SAT.Constraints
    Distribution.Solver.SAT.DependencyInfo
    Distribution.Solver.SAT.DMap
    Distribution.Solver.SAT.Implementation
    Distribution.Solver.SAT.Installed
    Distribution.Solver.SAT.PkgConfig
    Distribution.Solver.SAT.Preferences
    Distribution.Solver.SAT.Solver
    Distribution.Solver.SAT.Sources

  build-depends:
    , ansi-terminal          ^>=1.0
    , base                   >=4.17      && <4.19
    , bytestring             ^>=0.11.4.0
    , cabal-install-parsers  ^>=0.6.1
    , Cabal-syntax           ^>=3.10.1.0
    , containers             ^>=0.6.0.1
    , indexed-traversable    ^>=0.1.2.1
    , optics-core            ^>=0.4.1.1
    , optics-extra           ^>=0.4.2.1
    , sat-simple             ^>=0.1.1.0
    , some                   ^>=1.0.5
    , tar                    ^>=0.5.1.1
    , transformers           ^>=0.5.6.2
